support tab renaming
